@@ -1,6 +1,12 @@
 2007-10-09  Alexander Larsson  <alexl@redhat.com>
 
         * daemon/gvfsbackendtrash.c:
+	Nicer filenames for things in the home trash.
+	This is the common case, so lets make them look nice.
+
+2007-10-09  Alexander Larsson  <alexl@redhat.com>
+
+        * daemon/gvfsbackendtrash.c:
 	Check for trash dirs in fork to avoid getting stuck
 	on e.g. hanged nfs dirs
 
